Wed Sep 22 14:04:27 BST 2004  Olly Betts <olly@survex.com>

	* common/positionlist.h,matcher/: Moved all of the implementations
	  of the XXXPostList classes from the .h files into the .cc files.
	  All the methods are virtual, so we aren't going to gain anything
	  from being able to inline them.

Wed Sep 22 02:58:59 BST 2004  Olly Betts <olly@survex.com>

	* configure.ac: Automatically add -Werror to CFLAGS and CXXFLAGS if
	  maintainer mode is enabled and we're using GCC3 or newer.  Don't
	  do this for older GCCs as GCC 2.95 issues spurious warnings.

Wed Sep 22 02:41:41 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_record.cc,backends/quartz/quartz_utils.h:
	  Introduced CASSERT_TYPE_UNSIGNED to replace the common use of
	  CASSERT to assert at compile time that a type is unsigned.

Tue Sep 21 15:58:05 BST 2004  Olly Betts <olly@survex.com>

	* PLATFORMS: Removed reports from versions prior to 0.7.0.  So much
	  has changed that these are of little value.

Mon Sep 20 15:24:27 BST 2004  Olly Betts <olly@survex.com>

	* NEWS,PLATFORMS,configure.ac: Version 0.8.3.

Mon Sep 20 15:13:34 BST 2004  Olly Betts <olly@survex.com>

	* AUTHORS: Updated.

Mon Sep 20 14:26:35 BST 2004  Olly Betts <olly@survex.com>

	* xapian.spec.in: Removed reference to xapian-examples' createdatabase
	  (which is no longer in xapian-examples).

Mon Sep 20 13:06:59 BST 2004  Olly Betts <olly@survex.com>

	* xapian.spec.in: Updated version from Fabrice Colin (incorporating
	  changes from Alan Cox's RPM spec files): split off libs into a
	  separate package to allow 32 and 64 bit versions to be installed
	  concurrently; include binaries from xapian-examples; updated source
	  URLs. 

Mon Sep 20 03:25:44 BST 2004  Olly Betts <olly@survex.com>

	* tests/api_anydb.cc: Added regression test for previous bug (test
	  checkatleast1).

Mon Sep 20 03:16:14 BST 2004  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Fixed segfault with check_at_least when there