@@ -3,6 +3,7 @@
  * ----START-LICENCE----
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2002 Ananova Ltd
+ * Copyright 2004 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -24,7 +25,6 @@
 #ifndef OM_HGUARD_ORTERMLIST_H
 #define OM_HGUARD_ORTERMLIST_H
 
-#include "database.h"
 #include "branchtermlist.h"
 
 class OrTermList : public BranchTermList {
