@@ -2,7 +2,7 @@
  *
  * ----START-LICENCE----
  * Copyright 1999,2000,2001 BrightStation PLC
- * Copyright 2003 Olly Betts
+ * Copyright 2003,2004 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -24,9 +24,7 @@
 #ifndef OM_HGUARD_SELECTPOSTLIST_H
 #define OM_HGUARD_SELECTPOSTLIST_H
 
-#include "database.h"
 #include "postlist.h"
-#include "omdebug.h"
 
 /** A postlist parent class for classes which only return selected docs
  *  from a source postlist (e.g. NEAR and PHRASE)
